# slay.py

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py
slaypy/: README.md  README.txt  __init__.py  requirements.txt
slaypy/core/: enums.py  socket.py  ws.py
slaypy/modules/: basic.py  client.py  lobby.py  settings.py
slaypy/objects/: __init__.py  basic.py  lobby.py
slaypy/utils/: network.py  types.py
